--- a/indexAna.html
+++ b/indexAna.html
@@ -13,12 +13,13 @@
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   color: #fff;
   font-family: 'Georgia', serif;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   text-align: center;
 
   background-image:
@@ -33,6 +34,10 @@ body {
 .container {
   padding: 2rem;
   max-width: 900px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .couple {
@@ -87,6 +92,20 @@ body {
   opacity: 0.85;
 }
 
+.footer-logo {
+  padding: 1.5rem 0 2rem;
+  margin-top: auto;
+}
+
+.footer-logo img {
+  display: block;
+  max-width: 100px;
+  width: 100%;
+  height: auto;
+  opacity: 0.9;
+  filter: brightness(0) invert(1);
+}
+
 @media (max-width: 600px) {
   .number {
     font-size: 2.2rem;
@@ -132,6 +151,10 @@ body {
   <div class="magic-text" id="magicText"></div>
 
 </div>
+
+  <div class="footer-logo">
+    <img src="comite-ana-sf.png" alt="Comite Ana" />
+  </div>
 
 <script>
 const targetDate = new Date(2026, 5, 13, 0, 0, 0);
